Ref #15495 Fixed bug when description is too long

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -416,7 +416,6 @@ td.path{
         max-width: 0;
         overflow: hidden;
         text-overflow: ellipsis;
-        white-space: nowrap;
         }
 }
 
